GNOME Bugzilla – Bug 701712
brokenness in master with NMDeviceModem and :ip-iface
Last modified: 2013-06-07 16:21:05 UTC
When I made the various nm_device_*_new() functions take an NMPlatformLink, I cleaned up some stuff in nm-device.c, one of which was getting rid of this in set_property(): >- case PROP_IP_IFACE: >- break; which clearly wasn't doing anyone any good. But apparently, NMDeviceModem does try to set ip-iface at construct time anyway. So this didn't work before my commit, but now it causes warnings since the property is read-only now. Anyway, is this just cruft, or has it been broken in master for a while and no one noticed, or...?
That property was meant to be set during GObject construction for modems managed by the old MM, but not setting it didn't end up harming because when querying nm_device_get_ip_iface(), this would end up returning 'iface' instead of 'ip_iface' if the latter was unset; and actually 'iface' is set to the modem's data port when using the old MM... that's why we didn't find the bug before. When using the new MM, ip-iface is set during the Bearer creation using nm_device_set_ip_iface(), so it was also unaffected. Will prepare a patch to fix this.
Created attachment 246256 [details] [review] Patch for the issue.
committed. thanks